fix balance button alignment issue in trade

--- a/src/sass/app/trade.scss
+++ b/src/sass/app/trade.scss
@@ -604,7 +604,7 @@
             border-radius: 0 0 0 $BORDER_RADIUS;
         }
         #confirmation_message_container {
-            padding: 15px;
+            padding: 15px 0;
             height: 90%;
             height: calc(100% - 30px);
         }
